[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nvmodels"
version = "0.0.1.dev1"

description = "A package for simulating nitrogen-vacancy centers in diamond."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["nitrogen", "vacancy", "diamond", "quantum", "quantum computing",
"quantum information science", "electron spin control", "quantum materials"]

authors = [
    {name = "G. Adam Cox", email = "gadamc@gmail.com" },
]

maintainers = [
    {name = "G. Adam Cox", email = "gadamc@gmail.com" },
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "qutip>=4.7.1",
    "matplotlib>=3.7.1",
    "plotly>=5.13.1",
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/gadamc/nvmodels"
"Source" = "https://github.com/gadamc/nvmodels"
"Bug Tracker" = "https://github.com/gadamc/nvmodels/issues"
"Changelog" = "https://github.com/gadamc/nvmodels/releases"
